# KKKVS

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  main.cpp
ci/: build-wheels-using-docker.sh  build-wheels-using-mac.sh  build-wheels-using-windows.bat
include/: hello.hpp  kkkvs.hpp
include/kkkvs/: kkkvs.hpp  value_index.hpp
java/: CMakeLists.txt  build.gradle
java/src/kkkvs/c/: kkkvs.c
java/src/main/java/jp/ksgwr/kkkvs/: KKKVS.java  ValueIndex.java
java/src/native/: CMakeLists.txt  jkkkvs.cpp
java/src/test/java/jp/ksgwr/kkkvs/: KKKVSTest.java  ValueIndexTest.java
lib/: CMakeLists.txt
lib/hello/: CMakeLists.txt  hello.cpp
lib/kkkvs/: CMakeLists.txt  kkkvs.cpp  value_index.cpp
python/: .gitignore  CMakeLists.txt  pytest.ini.in  requirements-dev.txt  setup.py
python/src/: kkkvspy.cpp
python/tests/: kkkvspy_test.py  test_kkkvspy.py
test/: CMakeLists.txt
test/hello/: CMakeLists.txt  main.cpp
test/kkkvs/: CMakeLists.txt  kkkvs_unittest.cpp  value_index_unittest.cpp
travis/: build-wheels-using-docker.sh  build-wheels-using-mac.sh  build-wheels.sh
